--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,41 @@ python:
   - "3.5"
   - "3.6"
 
-before_install:
-  - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
-  - sudo apt-get update -qq
+cache: pip
 
-install:
-  - sudo apt install build-essential
-  - sudo apt-get install -y gcc-arm-embedded
-  # QEMU deps
-  - sudo apt install libxenstore3.0
-  - sudo apt install libxen-dev
-  - sudo apt install genromfs
-  - wget https://github.com/PikoRT/tools/raw/master/bin/x86_64-linux/qemu-system-arm
-  - chmod 777 qemu-system-arm
-  - export PATH=$PATH:$PWD
+matrix:
+  fast_finish: true
+  include:
+    - os: linux
+      env: TESTING=docs
+      language: python
+      python: 3.6
+      before_script:
+        - cd docs
+        - pip install sphinx
+      script:
+        - make check
+        - make html
+    - os: linux
+      env: TESTING=Piko/RT
+      language: c
+      compiler: arm-none-eabi-gcc
 
-before_script:
-  - arm-none-eabi-gcc --version
-  - python3 --version
-
-script:
-  - make PLAT=stm32p103
-  - make PLAT=stm32p103 check
+      before_install:
+        - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
+        - sudo apt-get update -qq
+      install:
+        - sudo apt install build-essential
+        - sudo apt-get install -y gcc-arm-embedded
+        # QEMU deps
+        - sudo apt install libxenstore3.0
+        - sudo apt install libxen-dev
+        - sudo apt install genromfs
+        - wget https://github.com/PikoRT/tools/raw/master/bin/x86_64-linux/qemu-system-arm
+        - chmod 777 qemu-system-arm
+        - export PATH=$PATH:$PWD
+      before_script:
+        - arm-none-eabi-gcc --version
+      script:
+        - make PLAT=stm32p103
+        - make PLAT=stm32p103 check
