--- a/docs/Makefile
+++ b/docs/Makefile
@@ -11,13 +11,20 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help genposix clean Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
+html: genposix
+
+genposix:
+	-python3 posix/parse.py
+
+clean:
+	-rm -rf _build/* posix/posix_*.rst
 
 check:
 	python3 ../scripts/rstlint.py
