CI: Change lang env from `C` to `Python`
The only impact about changing lang env is to cause differences of
default configurations and actions.

Here are references:
    C:      https://docs.travis-ci.com/user/languages/c/
    Python: https://docs.travis-ci.com/user/languages/python/

We manully install latest arm-none-gcc toolchain, but have to update python up
to 3.5. However, we could change lang env and let Travis help us to do that.

Moreover, it's necessary to choose Python version greater than 3.5.
Cause method `subprocess.run()` is added since "3.5" in `subprocess` module.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: required
 dist: trusty
-language: c
-compiler:
-  - arm-none-eabi-gcc
+language: python
+python:
+  - "3.5"
+  - "3.6"
 
 before_install:
   - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
@@ -21,6 +22,7 @@ install:
 
 before_script:
   - arm-none-eabi-gcc --version
+  - python3 --version
 
 script:
   - make PLAT=stm32p103
