Update CMSIS lib path
The source repo change location of CMSIS lib
path, update WGET path accordingly.
Meanwhile, to align with CMSIS lib path change,
also update include path of two platforms' Makefile

--- a/platform/f429disco/Makefile
+++ b/platform/f429disco/Makefile
@@ -6,7 +6,8 @@ RAMSZ = 192k
 
 CFLAGS += \
     -Iplatform/f429disco \
-    -I$(CMSIS)/util \
+    -I$(CMSIS)\
+    -I$(CMSIS)/platform \
     -I$(CMSIS)/arm \
     -I$(CMSIS)/arm/TARGET_CORTEX_M \
     -I$(CMSIS)/arm/TARGET_CORTEX_M/TOOLCHAIN_GCC \
